Fix runtime bugs: currency symbols, missing @Transactional, NPE guards, stale closures
- Fix ₪ (shekel) → JOD in 8 backend spending limit messages (ClaimEngineService, GlobalPolicyClaimValidationService, PrescriptionService)
- Add @Transactional to SearchProfileService, PriceListService write methods, RoleService
- Add null checks for getMember()/getDoctor()/getClient() in EmergencyRequestService, LabRequestService, RadiologyRequestService, HealthcareProviderClaimService

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>