@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,40 +16,28 @@ public class ProvidersReportService {
     private final ClientRepository clientRepo;
 
     public ProvidersReportDto generateReport() {
-        List<Client> clients = clientRepo.findAll();
+        List<String> doctors = clientRepo.findByRoleOrRequestedRole(RoleName.DOCTOR).stream()
+                .map(Client::getFullName).toList();
 
-        // دكاترة - filter by requestedRole
-        List<String> doctors = clients.stream()
-                .filter(c -> c.getRequestedRole() == RoleName.DOCTOR)
-                .map(Client::getFullName)
-                .collect(Collectors.toList());
+        List<String> pharmacies = clientRepo.findByRoleOrRequestedRole(RoleName.PHARMACIST).stream()
+                .map(Client::getFullName).toList();
 
-        // صيادلة
-        List<String> pharmacies = clients.stream()
-                .filter(c -> c.getRequestedRole() == RoleName.PHARMACIST)
-                .map(Client::getFullName)
-                .collect(Collectors.toList());
+        List<String> labs = clientRepo.findByRoleOrRequestedRole(RoleName.LAB_TECH).stream()
+                .map(Client::getFullName).toList();
 
-        // مختبرات
-        List<String> labs = clients.stream()
-                .filter(c -> c.getRequestedRole() == RoleName.LAB_TECH)
-                .map(Client::getFullName)
-                .collect(Collectors.toList());
-
-        // أشعة (Radiologists)
-        List<String> radiologists = clients.stream()
-                .filter(c -> c.getRequestedRole() == RoleName.RADIOLOGIST)
-                .map(Client::getFullName)
-                .collect(Collectors.toList());
+        List<String> radiologists = clientRepo.findByRoleOrRequestedRole(RoleName.RADIOLOGIST).stream()
+                .map(Client::getFullName).toList();
 
         return ProvidersReportDto.builder()
                 .totalProviders(doctors.size() + pharmacies.size() + labs.size() + radiologists.size())
                 .doctorsCount(doctors.size())
                 .pharmaciesCount(pharmacies.size())
                 .labsCount(labs.size())
+                .radiologistsCount(radiologists.size())
                 .doctors(doctors)
                 .pharmacies(pharmacies)
                 .labs(labs)
+                .radiologists(radiologists)
                 .build();
     }
 }
